[project]
name = 'mmda'
version = '0.9.26'
description = 'MMDA - multimodal document analysis'
authors = [
    {name = 'Allen Institute for Artificial Intelligence', email = 'contact@allenai.org'},
]
license = {text = 'Apache-2.0'}
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
        'tqdm<5',
        'pdf2image<2',
        'pdfplumber==0.7.4',
        'requests<3',
        'pandas<2',
        'numpy<2',
        'pydantic[settings]>=1,<3',
        'ncls==0.0.70',
        'necessary>=0.3.2,<1',
]

[project.urls]
'Homepage' = 'https://www.github.com/allenai/mmda'
'Repository' = 'https://www.github.com/allenai/mmda'
'Bug Tracker' = 'https://www.github.com/allenai/mmda/issues'

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ['src',]

[tool.setuptools.package-data]
mmda = [
    '../requirements.txt',
]
ai2_internal = [
    './bibentry_detection_predictor/data/*',
    './bibentry_predictor_mmda/data/*',
    './citation_mentions/data/*',
    './vila/test_fixtures/*',
    './dwp_heuristic/test_fixtures/*',
    './figure_table_predictors/test_fixtures/*',
    './figure_table_predictors/test_fixtures.images/*',
    './svm_word_predictor/test_fixtures/*',
    './shared_test_fixtures/*',
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 61.0.0',
    'pip >= 21.0.0',
    'wheel'
]

[project.optional-dependencies]
dev = [
    'pytest<10',
    'pytest-xdist<4',
    'pytest-cov<8',
]
grobid_augment_existing_document_parser = [
    'grobid-client-python==0.0.5'
]
spacy_predictors = [
    'spacy<4',
]
pysbd_predictors = [
    'pysbd<1',
]
heuristic_predictors = [
    'tokenizers<1',
    'pydantic>=1,<2',
]
lp_predictors = [
    'layoutparser<1',
    'torch<3',
    'torchvision<1',
    'effdet<1',
    'pydantic>=1,<2'
]
hf_predictors = [
    'torch<3',
    'transformers<6',
    'smashed==0.1.10',
]
vila_predictors = [
    'vila>=0.5,<0.6',
    'transformers<4.34.0',
    'pydantic>=1,<2',
]
mention_predictor = [
    'transformers[torch]<6',
    'optimum[onnxruntime]<3',
    'pydantic>=1,<2',
]
mention_predictor_gpu = [
    'transformers[torch]<6',
    'optimum[onnxruntime-gpu]<3',
    'pydantic>=1,<2',
]
bibentry_predictor = [
    'transformers<6',
    'unidecode<2',
    'torch<3',
    'optimum[onnxruntime]<3',
    'pydantic>=1,<2',
]
bibentry_predictor_gpu = [
    'transformers<6',
    'unidecode<2',
    'torch<3',
    'optimum[onnxruntime-gpu]<3',
    'pydantic>=1,<2'
]
bibentry_detection_predictor = [
    'Pillow<13',
    'layoutparser<1',
    'pydantic>=1,<2',
]
citation_links = [
    'numpy<2',
    'thefuzz[speedup]<1',
    'scikit-learn<1.3',
    'xgboost<2',
    'pydantic>=1,<2',
]
section_nesting = [
    'numpy<2',
    'scipy<2',
    'xgboost<2',
]
figure_table_predictors = [
    'scipy<2',
    'pydantic>=1,<2',
]
svm_word_predictor = [
    'scikit-learn<1.3',
    'scipy<2',
    'numpy<2',
    'tokenizers<1',
    'pydantic>=1,<2',
]
recipes = [
    'layoutparser<1',
    'transformers<6',
    'torch<3',
    'torchvision<1',
    'effdet<1',
    'vila>=0.5,<0.6',
    'smashed==0.1.10',
    'scikit-learn<1.3',
    'scipy<2',
    'numpy<2',
    'tokenizers<1',
    'xgboost<2',
]


[tool.pytest.ini_options]
addopts = '-n auto --cov=src/mmda'
testpaths = ['tests/']
pythonpath = [
  '.', 'src',
]
python_classes = ['Test*', '*Test']
log_format = '%(asctime)s - %(levelname)s - %(name)s - %(message)s'
log_level = 'DEBUG'
markers = []
filterwarnings = []

[tool.coverage.run]
omit = [
    '*__init__*',
    '*Test*',
    'tests/fixtures/*',
]
[tool.coverage.report]
fail_under = 57
