[project]
name = "papermage"
version = '0.0.2'
description = 'multimodal document analysis'
authors = [
    {name = 'Allen Institute for Artificial Intelligence', email = 'contact@allenai.org'},
]
license = {text = 'Apache-2.0'}
readme = 'README.md'
requires-python = '>=3.7'
dependencies = [
        'mmda>=0.2.7',
]


[project.urls]
'Homepage' = 'https://www.github.com/allenai/mmda'
'Repository' = 'https://www.github.com/allenai/mmda'
'Bug Tracker' = 'https://www.github.com/allenai/mmda/issues'


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"papermage" = ["py.typed", "*.pyi"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "pytest>=5.2",
    "ipython>=8.4.0",
    "autopep8>=1.7.0",
    "flake8>=5.0",
    "ipdb>=0.13.0",
    "flake8-pyi>=22.8.1",
    "Flake8-pyproject>=1.1.0"
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.mypy-tests]
strict_optional = false

[tool.flake8]
per-file-ignores = [
    '__init__.py:F401',
    '*.pyi:E302,E305',
    '*.py:E203'
]
